--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "online-store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://seemasb.github.io/Online-Store-GSG",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.10.2",
     "bootstrap": "^4.5.3",
-    "firebase": "^8.2.2",
+    "firebase": "^8.2.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -22,6 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,6 +52,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
